# car_rental

./: 404.html  Dockerfile  Makefile  README.md  car_rental.db  conftest.py  create_openapi_json.py  explanation.html  how-to-guides.html  index.html  main.py  mkdocs.yml  models.py  objects.inv  pyproject.toml  reference.html  requirements.txt  tutorials.html
.github/workflows/: lint.yml  test.yml
car_rental/: __init__.py  __main__.py  api.py  car_rental.db  cli.py  config.py  core.py  db.py  models.py  serializer.py  settings.toml
docs/: documentation.md  index.md  openapi.json  reference.md
scripts/: create_openapi_json.py
search/: search_index.json
tests/: car_rental.db  test_core.py  test_functional.py  test_functional_api.py  test_functional_cli.py
