[tool.poetry]
name = "car-rental"
version = "0.1.0"
description = ""
authors = ["Eduardo Wang <eduardo.b.wang@gmail.com>"]
readme = "README.md"
packages = [{include = "car_rental"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
sqlmodel = "^0.0.8"
dynaconf = "^3.2.0"
rich = "^13.4.2"
uvicorn = "^0.23.1"
fastapi = "^0.100.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
