[tool.poetry]
name = "car-rental"
version = "0.1.0"
description = ""
authors = ["Eduardo Wang <eduardo.b.wang@gmail.com>"]
readme = "README.md"
packages = [{include = "car_rental"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
sqlmodel = "^0.0.8"
dynaconf = "^3.2.0"
rich = "^13.4.2"
uvicorn = "^0.23.1"
fastapi = "^0.100.0"
httpx = "^0.24.1"

[tool.isort]
profile = "black"

[tool.mypy]
# 3rd party import
ignore_missing_imports = true
# dynamic typing
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = true
disallow_any_generics = false
disallow_subclassing_any = true
# platform
python_version = "3.11"
# untyped
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
# None and Optional
no_implicit_optional = true
# Warnings
warn_return_any = false
warn_unreachable = true
# Misc
pretty = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.2"
mkdocs-material = "^9.1.21"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}


[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
